--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html>
 
@@ -13,19 +12,103 @@
       background-color: #3b5998 !important;
       color: #fff !important;
     }
+
     .fa-facebook-f:before,
     .fa-facebook:before {
       content: "\f09a";
+    }
+
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    input[type=text],
+    input[type=password] {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+    }
+
+    button {
+      background-color: #4CAF50;
+      color: white;
+      padding: 14px 20px;
+      margin: 8px 0;
+      border: none;
+      cursor: pointer;
+      width: 50%;
+
+    }
+
+    button:hover {
+      opacity: 0.8;
+    }
+
+    .cancelbtn {
+      width: auto;
+      padding: 10px 18px;
+      background-color: #f44336;
+    }
+
+    .imgcontainer {
+      text-align: center;
+      margin: 24px 0 12px 0;
+    }
+
+    img.avatar {
+      width: 40%;
+      border-radius: 50%;
+    }
+
+    .container {
+      padding: 16px;
+    }
+
+    span.psw {
+      float: right;
+      padding-top: 16px;
+    }
+
+    /* Change styles for span and cancel button on extra small screens */
+    @media screen and (max-width: 300px) {
+      span.psw {
+        display: block;
+        float: none;
+      }
+
+      .cancelbtn {
+        width: 100%;
+      }
+    }
+
+    .bg {
+      /* The image used */
+      background-image: url("https://c.pxhere.com/images/d8/59/435d2a2159cf8f6916df03668563-1630982.jpg!d");
+      /* Full height */
+      height: 1000;
+
+      /* Center and scale the image nicely */
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    .pic {
+      height: 50%;
+      width: 50%;
+    }
+
+    b {
+      font-size: 15px;
     }
   </style>
 </head>
 
 <body>
-  <nav class="light-blue lighten-1" role="navigation">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="#" class="brand-logo">Node Authentication</a>
-    </div>
-  </nav>
+  <div class="bg">
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
@@ -34,6 +117,26 @@
           <div class="card">
             <div class="card-content">
               <span class="card-title">Facebook Login using Node and passport</span>
+            </div>
+            <div class="imgcontainer" style="margin-top: -60px;">
+              <img src="https://sv1.picz.in.th/images/2021/04/01/DLbHPV.png" alt="" width="401" height="296">
+            </div>
+
+            <div class="container" style="margin-top: -80px;">
+              <div style="text-align: center">
+                <label for="uname" style="color:#000000"><b>Username</b></label>
+                <input type="text" placeholder="Enter Username" name="uname" required>
+                <br>
+                <label for="psw" style="color:#000000"><b>Password </b></label>
+                <input type="password" placeholder="Enter Password" name="psw" required>
+                <br>
+                <button type="submit">Login</button>
+
+                <div style="padding-top:0">
+                  <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="login_with"
+                    scope="public_profile,email" onlogin="checkLoginState();" auto-logout-link="true"></div>
+                </div>
+              </div>
             </div>
             <div class="card-action">
               <a href="/auth/facebook" class="waves-effect waves-light btn social facebook">
@@ -44,6 +147,7 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
 </body>
 
